--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,11 @@ html, body {
   text-align: center;
 }
 
+.slideshow img{
+  width: 100%;
+  height: 450px;
+}
+
 .toggle-button {
   font-size: 40px;
 }
