--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,15 @@
-@media only screen and (max-width: 700px){
+/* MOBILE Phones */
+@media only screen and (max-width: 525px){
+  .page-title {
+    font-size: 40px;
+    padding-top: 10px;
+  }
+
+  .sub-title{
+    font-size: 25px;
+    padding-bottom: 5px;
+  }
+
   .slideshow{
     text-align: center;
   }
@@ -7,6 +18,11 @@
     width: 70%;
     margin: 1px 1px 1px 1px;
     padding: 5px 5px 5px 5px;
+  }
+
+  .slideshow img{
+    width: 100%;
+    height: 180px;
   }
 
   .toggle-button {
@@ -22,6 +38,122 @@
     width: 10px;
     height: 10px;
     border-radius: 5px;
+    background-color: #fff;
+    display: inline-block;
+    margin: 2px;
+  }
+
+  .timeline{
+    width: 90%;
+    margin-left: 5%;
+    height: 60%;
+  }
+
+  .timeline .contents {
+    padding-left: 0px;
+    padding-right: 15px;
+    text-align: justify;
+  }
+}
+
+/* Small Devices */
+@media only screen and (max-width: 600px) and (min-width: 526px){
+  .page-title {
+    font-size: 45px;
+    padding-top: 10px;
+  }
+
+  .sub-title{
+    font-size: 30px;
+    padding-bottom: 5px;
+  }
+
+  .slideshow{
+    text-align: center;
+  }
+
+  .slideshow .profile-image{
+    width: 70%;
+    margin: 1px 1px 1px 1px;
+    padding: 5px 5px 5px 5px;
+  }
+
+  .slideshow img{
+    width: 100%;
+    height: 250px;
+  }
+
+  .toggle-button {
+    font-size: 23px;
+  }
+
+  .toggler-images {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  .circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 6px;
+    background-color: #fff;
+    display: inline-block;
+    margin: 2px;
+  }
+
+  .timeline{
+    width: 90%;
+    margin-left: 5%;
+    height: 60%;
+  }
+
+  .timeline .contents {
+    padding-left: 0px;
+    padding-right: 15px;
+    text-align: justify;
+  }
+}
+
+/* TABLET Phones */
+@media only screen and (max-width: 767px) and (min-width: 601px){
+  .page-title {
+    font-size: 45px;
+    padding-top: 10px;
+  }
+
+  .sub-title{
+    font-size: 30px;
+    padding-bottom: 5px;
+  }
+
+  .slideshow{
+    text-align: center;
+  }
+
+  .slideshow .profile-image{
+    width: 70%;
+    margin: 1px 1px 1px 1px;
+    padding: 5px 5px 5px 5px;
+  }
+
+  .slideshow img{
+    width: 100%;
+    height: 350px;
+  }
+
+  .toggle-button {
+    font-size: 30px;
+  }
+
+  .toggler-images {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  .circle {
+    width: 16px;
+    height: 16px;
+    border-radius: 8px;
     background-color: #fff;
     display: inline-block;
     margin: 2px;
