--- a/css/main.css
+++ b/css/main.css
@@ -20,16 +20,6 @@ html, body {
   font-size: 25px;
   padding-bottom: 10px;
 }
-
-.slideshow{
-  text-align: center;
-}
-
-.slideshow img{
-  width: 100%;
-  height: 450px;
-}
-
 .toggle-button {
   font-size: 40px;
 }
@@ -52,6 +42,7 @@ html, body {
   background-color: #fff;
   display: inline-block;
   margin: 5px;
+  transition: all 0.5s ease;
 }
 
 .timeline{
@@ -75,4 +66,16 @@ html, body {
 li {
   margin-top: 3px;
   margin-bottom: 3px;
+}
+.slideshow2{
+  background-image: url('../images/slideshow1.jpg');
+  height: 38vw;
+  background-repeat: no-repeat;
+  width: 65% !important;
+  margin: auto;
+  box-shadow: 0 0 15px 15px #fff;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
+  transition: all 0.5s ease;
+  background-size: cover;
 }
